# Live-Chat

./: .gitignore  README.md
backend/: app.py  config.py  constants.py  database.sqlite3  database.sqlite3-shm  database.sqlite3-wal  pyproject.toml  serializers.py
backend/blueprints/: __init__.py
backend/blueprints/_app/: app_blueprint.py
backend/blueprints/api/: __init__.py  serializers.py
backend/blueprints/auth/: __init__.py  auth_blueprint.py  validators.py
backend/blueprints/websocket/: __init__.py  client_class.py  websocket_blueprint.py
backend/migrations/models/: 0_20220202120530_init.sql  0_20220211104655_init.sql  1_20220212103831_None.sql
backend/models/: api.py  app.py  auth.py
backend/test_clients/: client_1.py  client_2.py  client_3.py  client_4.py  shell.bat
backend/utils/: fields.py  helpers.py  snowflake.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  App.tsx  gateway.js  http.js  index.js  index.scss  index.tsx  request.ts  style.scss
frontend/src/Components/: PrivateRoute.js
frontend/src/Components/LoadingPlaceholder/: index.js
frontend/src/Components/Sidebar/: index.js
frontend/src/Pages/: ChatApp.js  Login.js
frontend/src/components/: FormInput.tsx  PrivateRoute.tsx
frontend/src/components/Sidebar/: Channel.tsx  Menu.tsx  index.tsx
frontend/src/components/Tooltip/: index.tsx
frontend/src/containers/: ChatApp.tsx  Connecting.tsx  Login.tsx  SignUp.tsx
frontend/src/store/: index.js  index.ts  types.ts
frontend/src/store/Reducers/: index.js  (+1 more)
(+39 files in other folders)
